# OVC

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
benches/: ovc_compare.rs
benchmarks/: CMakeLists.txt  benchmark_ovc.cpp
src/: CMakeLists.txt  lib.rs  ovc.cpp  ovc.h
